--- a/admin-web/src/main/frontend/src/theme.dark.less
+++ b/admin-web/src/main/frontend/src/theme.dark.less
@@ -10,4 +10,7 @@
     background-color: #141414;
   }
 
+  .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
+    background-color: #1f1f1f;
+  }
 }
