--- a/admin-web/src/main/frontend/src/theme.light.less
+++ b/admin-web/src/main/frontend/src/theme.light.less
@@ -1,6 +1,5 @@
 .light {
-  @import '~antd/lib/style/themes/default.less';
-  @import '~antd/dist/antd.less';
+  @import '~antd/dist/antd';
   @import 'app';
 
   #sider {
