--- a/admin-web/src/main/frontend/src/components/article/editor/my-editormd.css
+++ b/admin-web/src/main/frontend/src/components/article/editor/my-editormd.css
@@ -1870,3 +1870,17 @@ hr.editormd-page-break {
     color: #999999;
 }
 
+.dark .editormd-dialog {
+    background: #141414;
+}
+
+.dark .editormd-dialog-header {
+    border-bottom: 1px solid #2c2827;
+}
+.dark .editormd-dialog-footer {
+    border-top: 1px solid #2c2827;
+}
+
+.dark .editormd-dialog-header:hover {
+    border-bottom: 1px solid #2c2827;
+}
