Optimize editor dark toolbar

--- a/admin-web/src/main/frontend/src/components/article/article-edit.less
+++ b/admin-web/src/main/frontend/src/components/article/article-edit.less
@@ -11,7 +11,7 @@
 }
 
 .save-btn-full-screen > button {
-    background-color: #1b1a18;
+    background-color: #141414;
     border: 0;
     color: #888;
 }
@@ -25,13 +25,13 @@
 }
 
 .saveToRubbish-btn-full-screen > button {
-    background-color: #1b1a18;
+    background-color: #141414;
     border: 0;
     color: #888;
 }
 
 .saveToRubbish-btn-full-screen > .ant-btn-loading:before {
-    background-color: #1b1a18;
+    background-color: #141414;
     border: 0;
     color: #888;
 }
