Support subfolder again

--- a/admin-web/src/main/frontend/src/app.less
+++ b/admin-web/src/main/frontend/src/app.less
@@ -23,3 +23,27 @@ ul {
 .ant-tabs-tab {
   margin-right: 24px;
 }
+
+
+.ant-menu {
+  text-align: center;
+}
+
+.ant-menu .menu-title {
+  margin-left: 0 !important;
+  font-size: 12px;
+}
+
+.ant-menu-title-content {
+  margin-left: 0 !important;
+  font-size: 12px;
+}
+
+.ant-form-item-explain-error {
+  color: #a61d24;
+}
+
+.ant-form-item-has-error .ant-radio-group {
+  border: 1px solid #a61d24;
+  border-radius: 2px;
+}
