--- a/admin-web/src/main/frontend/src/theme.dark.less
+++ b/admin-web/src/main/frontend/src/theme.dark.less
@@ -6,11 +6,16 @@
     background-color: #1f1f1f;
   }
 
+  .ant-menu-vertical > .ant-menu-item, .ant-menu-vertical-left > .ant-menu-item, .ant-menu-vertical-right > .ant-menu-item, .ant-menu-inline > .ant-menu-item, .ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-right > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+    background-color: #1f1f1f;
+  }
+
   .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
     background-color: #141414;
   }
 
-  .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
+  .ant-menu-item-selected a, .ant-menu-item-selected a:hover {
+    color: white;
     background-color: #1f1f1f;
   }
 }
