--- a/admin-web/src/main/frontend/src/theme.light.less
+++ b/admin-web/src/main/frontend/src/theme.light.less
@@ -10,11 +10,15 @@
     background-color: #001529;
   }
 
-  li.ant-menu-item > a {
-    background-color: #001529;
+  .ant-menu-item a {
+    color: white;
   }
 
   .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
     background-color: #2a3347;
+  }
+
+  .ant-menu-item-selected a, .ant-menu-item-selected a:hover {
+    color: white;
   }
 }
