Support subfolder again

--- a/admin-web/src/main/frontend/src/app.less
+++ b/admin-web/src/main/frontend/src/app.less
@@ -40,10 +40,10 @@ ul {
 }
 
 .ant-form-item-explain-error {
-  color: #a61d24;
+  color: #ff4d4f;
 }
 
 .ant-form-item-has-error .ant-radio-group {
-  border: 1px solid #a61d24;
+  border: 1px solid #ff4d4f;
   border-radius: 2px;
 }
